# server/src/main/kotlin/mohaamadreza/saemipour/no/vazheh/database/DatabaseConfig.kt
@@ -35,7 +35,8 @@ object DatabaseConfig {
                 Words,
                 CustomWords,
                 QuizAttempts,
-                ChildProgress
+                ChildProgress,
+                MemoryProgress
             )
         }
         
